--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.3"
    
 services:
+  migration:
+    command: python /code/benford/manage.py migrate --noinput
+    volumes:
+      - .:/code
   web:
     build: .
     command: python /code/benford/manage.py runserver 0.0.0.0:8000
